# starter_kit_example

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: main.c
src/abcc_adaptation/: abcc_driver_config.h  abcc_hardware_abstraction.c  abcc_software_port.c  abcc_software_port.h  abcc_system_adaptation.c  abcc_types.h
src/example_application/: application_data_instance_mapping_speed_example.c  impl_attr_cfb.c  implemented_callback_functions.c
